# efm-muscle-sim

./: .gitignore  CHANGELOG.md  CITATION.cff  LICENSE  NOTICE.md  QUICKSTART.md  README.md  README.txt  README_2DOF_OVERLAY.md  pyproject.toml
.github/workflows/: ci.yml
docs/: 2dof_soft_arm_training_demo.md  data_sources.md  engineering_notes.md  future_work.md  model_assumptions.md  mujoco_integration.md  repo_handoff.md  repo_handoff_for_fabian.md  validation_plan.md
examples/: render_2dof_soft_arm_gif.py  run_2dof_soft_arm_rollout.py  run_actuator_step_response.py  run_antagonistic_joint_demo.py  run_mujoco_loader.py  run_parameter_sweep.py  train_2dof_soft_arm_ppo.py
models/mujoco/: README.md  efm_biceps_triceps_arm.xml
scripts/: fetch_zenodo_dataset.py  fit_parameters.py  inspect_dataset_placeholder.py
src/efm_muscle_sim/: __init__.py  actuator.py  joint.py  parameters.py  plotting.py  simulation.py  soft_arm.py  training_env.py  units.py
tests/: test_actuator.py  test_joint.py  test_parameters.py  test_simulation_outputs.py  test_soft_arm_2d.py
