[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "efm-muscle-sim"
version = "0.1.0"
description = "Behavioral simulation abstraction for electrofluidic fiber muscle style actuation"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = [
    "numpy",
    "pandas",
    "matplotlib",
]

[project.optional-dependencies]
mujoco = ["mujoco"]
dev = ["pytest"]

[tool.setuptools.packages.find]
where = ["src"]
