[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "efm-muscle-sim"
version = "0.2.0"
description = "Behavioral simulation abstraction for electrofluidic fiber muscle style actuation"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = [
    "numpy",
    "pandas",
    "matplotlib",
]

[project.optional-dependencies]
mujoco = ["mujoco"]
training = ["gymnasium>=0.29", "stable-baselines3>=2.0"]
fitting = ["scipy>=1.10"]
dev = ["pytest"]

[tool.setuptools.packages.find]
where = ["src"]
